policies/kubernetes/rbac/custom-4.1.8.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cis-4-1-8-limit-bind-impersonate-escalate
  annotations:
    policies.kyverno.io/category: CIS 4.1.8
    policies.kyverno.io/description: |
      Audit for roles or bindings that grant bind, impersonate, or escalate permissions. Partial coverage, as some escalation paths are outside Kyverno's scope.
spec:
  validationFailureAction: Audit
  rules:
    - name: restrict-sensitive-verbs
      match:
        resources:
          kinds:
            - Role
            - ClusterRole
      validate:
        message: "Roles should not grant bind, impersonate, or escalate permissions."
        pattern:
          rules:
            - verbs: "!['bind', 'impersonate', 'escalate']"
