tests/kubernetes/custom-4.1.8/noncompliant/role.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: noncompliant-role
  namespace: secure-ns
rules:
  - apiGroups: [""]
    resources: ["pods"]
    verbs: ["impersonate"]
