tests/kubernetes/custom-4.1.8/noncompliant/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: custom-4.1.8-noncompliant
policies:
  - ../../../../policies/kubernetes/rbac/custom-4.1.8.yaml
resources:
  - role.yaml
results:
  - policy: cis-4-1-8-limit-bind-impersonate-escalate
    rule: restrict-sensitive-verbs
    resources:
      - noncompliant-role
    kind: Role
    result: fail
